--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -1,18 +1,32 @@
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
+
+.navbar {
+    width: 100%;
+    padding: 0px;
+    position: fixed;
+    top: 0px;
+    text-align: center;
+    transition: 0.5s;
+    margin-bottom: 30px;
+}
+
 #main-menu {
-    background: none repeat scroll 0 0;
-    font-family: sans-serif;
+    /* background: none repeat scroll 0 0; */
+    /* background: url('/images/skydivebg.png'); */
     font-size: 15px;
-    font-weight: 400;
     line-height: 1.5em;
+    /* background-color: blue; */
 }
 
 .inner-main-menu {
     margin: 0 auto;
     width: 1170px;
+    /* width: 100% */
 }
+
 .inner-main-menu ul {
     margin: 0;
-    padding: 80px 0 0;
+    padding: 30px 0 0;
     list-style: none;
     text-align: right;
 }
@@ -35,7 +49,9 @@
 }
 
 .inner-main-menu ul li a{
-    color: red;
+    font-family: 'Open Sans', sans-serif;
+    font-weight: 500;
+    color: black;
     font-size: 20px;
     text-transform: uppercase;
     text-decoration: none;
@@ -44,26 +60,27 @@
 }
 
 .inner-main-menu ul li a:hover{
-    color: black
+    color: #FFFBB6;
+    border-bottom: 2px solid #FFFBB6;  
 }
 
 #main-menu {
     width: 100%;
-    position: relative;
+    position: fixed;
 }
 
 #main-logo{
-    height: 300px;
+    height: 120px;
     width: 300px;
 }
 
 .logo {
     width: 300px;
-    height: 300px;
+    height: 120px;
     position: absolute;
     left: 50%;
     top: 0;
     content: '';
-    margin-left: -150px;
+    margin-left: -175px;
     text-align: center;
 }
